--- a/app/src/main/res/layout/activity_onboarding_two.xml
+++ b/app/src/main/res/layout/activity_onboarding_two.xml
@@ -58,7 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_board_title" />
 
     <ImageButton
-        android:id="@+id/btn_next"
+        android:id="@+id/btn_next2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/circle_button"
