--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -24,7 +24,7 @@
         android:id="@+id/tv_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="130dp"
         android:fontFamily="@font/sofia_pro_semi_bold"
         android:text="Login"
         android:textColor="@color/black"
@@ -34,7 +34,7 @@
 
 
     <TextView
-        android:id="@+id/tv_email"
+        android:id="@+id/text_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -66,11 +66,12 @@
         app:hintAnimationEnabled="false"
         app:hintEnabled="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_email">
+        app:layout_constraintTop_toBottomOf="@+id/text_email">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/tv_email"
             android:fontFamily="@font/sofia_pro_medium"
             android:inputType="text"
             android:hint="Your E-mail" />
@@ -90,11 +91,12 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_password"
         app:passwordToggleEnabled="true">
 
-        <com.google.android.material.textfield.TextInputEditText
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/sofia_pro_medium"
             android:hint="Password"
+            android:id="@+id/tv_pass"
             android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -114,7 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/edt_password" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_sign_in"
+        android:id="@+id/btn_signin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -131,7 +133,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />
 
     <TextView
-        android:id="@+id/tv_no_account"
+        android:id="@+id/tv_have_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -142,9 +144,9 @@
         android:text="Don\'t have an account?"
         android:textColor="@color/dove_gray"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in"
-        app:layout_constraintStart_toStartOf="@+id/btn_sign_in"
-        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_signin"
+        app:layout_constraintStart_toStartOf="@+id/btn_signin"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />
 
     <TextView
         android:id="@+id/tv_sign_up"
@@ -157,22 +159,24 @@
         android:text="Sign Up"
         android:textColor="@color/orange"
         android:textSize="14sp"
-        app:layout_constraintStart_toEndOf="@+id/tv_no_account"
-        app:layout_constraintTop_toBottomOf="@+id/btn_sign_in" />
+        app:layout_constraintStart_toEndOf="@+id/tv_have_account"
+        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />
 
     <TextView
         android:id="@+id/tv_sign_up_with"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
         android:fontFamily="@font/sofia_pro_medium"
         android:text="Sign up with"
         android:textColor="@color/scarpa_flow"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_facebook"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_have_account"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <View
         android:id="@+id/view_left_bar"
@@ -200,6 +204,7 @@
         android:id="@+id/btn_facebook"
         android:layout_width="199dp"
         android:layout_height="61dp"
+        android:layout_marginBottom="28dp"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/sofia_pro_medium"
         android:paddingHorizontal="30dp"
@@ -219,6 +224,7 @@
         android:layout_width="171dp"
         android:layout_height="56dp"
         android:layout_marginStart="10dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/rounded_button"
         android:fontFamily="@font/sofia_pro_medium"
         android:paddingHorizontal="30dp"
