--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -177,7 +177,7 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_start" />
 
     <TextView
-        android:id="@+id/btn_sign_in"
+        android:id="@+id/tv_signIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
